# bc-depo-api-rust

./: CLA.md  Cargo.toml  README.md
CLA-signed/: CLA.wolfmcnally.943652EE38441760C3DC35364B6C2FCF894780AE.md
src/: error.rs  lib.rs  receipt.rs
src/request/: delete_account.rs  delete_shares.rs  finish_recovery.rs  get_recovery.rs  get_shares.rs  mod.rs  start_recovery.rs  store_share.rs  update_key.rs  update_recovery.rs  update_xid_document.rs  util.rs
