[package]
name = "depo-api"
version = "0.14.0"
edition = "2024"
description = "API for the Blockchain Commons Depository ('depo') server."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-depo-api-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/depo-api"
keywords = [
    "cryptocurrency",
    "security",
    "key-management",
    "recovery",
    "server",
] # Up to five
categories = [
    "cryptography",
    "database",
    "web-programming::http-client",
] # https://crates.io/category_slugs

[dependencies]
dcbor = { version = "^0.23.0", features = ["multithreaded"] }
bc-ur = "^0.13.0"
bc-components = "^0.25.0"
bc-envelope = { version = "^0.34.0", features = ["multithreaded"] }
bc-xid = "^0.13.0"
gstp = "^0.10.0"

thiserror = "^2.0"
hex = "^0.4.3"

[dev-dependencies]
indoc = "^2.0.4"
hex-literal = "^0.4.1"
bc-rand = "^0.4.0"

[features]
multithreaded = ["dcbor/multithreaded", "bc-envelope/multithreaded"]
